...
      }
    },
    "API" : {
      "localizations" : {},
      "shouldTranslate" : false
    },
    "Abandonner" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Verwerfen"
          }
...
            "state" : "translated",
            "value" : "Regola il piano"
          }
        }
      }
    },
    "Ajuster mon plan" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Meinen Plan anpassen"
          }
...
            "state" : "translated",
            "value" : "Vai alle operazioni da spuntare"
          }
        }
      }
    },
    "Annuler" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Abbrechen"
          }
...
            "state" : "translated",
            "value" : "Riapri"
          }
        }
      }
    },
    "Réajuster la suite" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Den Rest neu verteilen"
          }
...
            "value" : "Sign up with email"
          }
        },
        "it" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Registrati con l'email"
          }
        }
      }
    },
    "SUPPORT" : {
      "localizations" : {
...
